Prevent nav highlight from overflowing nav bar
Happens if you resize the window small vertically.

--- a/personal_website/static/css/index.css
+++ b/personal_website/static/css/index.css
@@ -36,6 +36,7 @@ nav {
     background-color: var(--nav-color);
     z-index: 99;
     text-align: left;
+    overflow: hidden;
 }
 h1 {
     font-size: 26pt;
